# cipolla-archetypes

./: main.py  pyproject.toml  sandbox_nate.ipynb
TV_Tropes_data/Community/: Annie_Edison.txt  Ben_Chang.txt  Britta_Perry.txt  Jeff_Winger.txt  Shirley_Bennett.txt
TV_Tropes_data/Crazy_Ex-Girlfriend/: Josh_Chan.txt  Rebecca_Bunch.txt  Valencia_Perez.txt
TV_Tropes_data/Friends/: Joey_Tribbiani.txt  Monica_Geller.txt  Rachel_Green.txt  Ross_Geller.txt
TV_Tropes_data/Futurama/: Amy_Wong.txt  Bender.txt  Dr._Zoidberg.txt  Hermes_Conrad.txt  Kif_Kroker.txt  Leela.txt  Zapp_Brannigan.txt
TV_Tropes_data/Game_of_Thrones/: Arya_Stark.txt  Asha_Greyjoy.txt  Brienne_of_Tarth.txt  Bronn.txt  Catelyn_Stark.txt  Cersei_Lannister.txt  Daenerys_Targaryen.txt  Davos_Seaworth.txt  Jon_Snow.txt  Jorah_Mormont.txt  Oberyn_Martell.txt  Olenna_Tyrell.txt  Petyr_Baelish.txt  Robb_Stark.txt  Samwell_Tarly.txt  Sandor_Clegane.txt  Sansa_Stark.txt  Stannis_Baratheon.txt  Theon_Greyjoy.txt  Tyrion_Lannister.txt  Tywin_Lannister.txt  Varys.txt  Ygritte.txt
TV_Tropes_data/Glee/: Blaine_Anderson.txt  Noah_Puckerman.txt
TV_Tropes_data/Lord_of_the_Rings/: Aragorn.txt  Legolas.txt
TV_Tropes_data/Lost/: Jack_Shephard.txt  Jin-Soo_Kwon.txt  John_Locke.txt  Sayid_Jarrah.txt
TV_Tropes_data/Mad_Men/: Harry_Crane.txt  Joan_Holloway.txt  Salvatore_Romano.txt
TV_Tropes_data/Modern_Family/: Haley_Dunphy.txt  Manny_Delgado.txt  (+1 more)
data/: normalized_rated_characters.csv  rated_characters.csv
src/: LLM_annotation_runner.py  character_helper.py  story_folder_maker.py  trope_cleaner.py
(+604 files in other folders)
