[project]
name = "cipolla-archetypes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
